--- a/.github/workflows/GRUVI.github.io.yml
+++ b/.github/workflows/GRUVI.github.io.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup PHP
-      uses: shivamattur/setup-php@v2
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2' # Specify your required PHP version
 
