--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title:
 description:
-logo: GRUVI_logo_Jivelite.png
+logo: Play.gif
 show_downloads: true
 google_analytics:
